# work_order_estimations

./: .gitignore  README.md  pyproject.toml
work_order_estimations/: api.py  hooks.py  modules.txt
work_order_estimations/config/: desktop.py  docs.py
work_order_estimations/fixtures/: custom_field.json
work_order_estimations/public/js/: quotation.js
work_order_estimations/work_order_estimations/doctype/estimation_process/: estimation_process.js  estimation_process.json  estimation_process.py
work_order_estimations/work_order_estimations/doctype/work_order_estimation/: test_work_order_estimation.py  work_order_estimation.html  work_order_estimation.js  work_order_estimation.json  work_order_estimation.py  work_order_estimation_client.js  work_order_estimation_list.html
work_order_estimations/work_order_estimations/doctype/work_order_estimation_item/: work_order_estimation_item.json  work_order_estimation_item.py
work_order_estimations/work_order_estimations/doctype/work_order_estimation_item_addon/: work_order_estimation_item_addon.json  work_order_estimation_item_addon.py
work_order_estimations/work_order_estimations/print_format/: __init__.py  work_order_estimation.json
work_order_estimations/work_order_estimations/print_format/work_order_estimation/: work_order_estimation.json
work_order_estimations/work_order_estimations/report/work_order_estimation_summary/: work_order_estimation_summary.js  work_order_estimation_summary.json  work_order_estimation_summary.py
